--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-indes-v3
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
+    <title>Login</title>
+</head>
+
+<body>
+    <div class="login-parent">
+        <h1>LOGIN</h1>
+        <div class="credentials">
+            <div class="credential">
+                <h3>email</h3>
+                <input type="email">
+            </div>
+            
+            <div class="credential">
+                <h3>Password</h3>
+                <input type="password">
+            </div>
+            <button>Access</button>
+        </div>
+        <button>Create account</button>
+    </div>
+
+</body>
+
+</html>
