--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>LOGIN</h1>
         <div class="credentials">
             <div class="credential">
-                <h3>email</h3>
+                <h3>Email</h3>
                 <input type="email">
             </div>
             
